plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'com.vaadin' version '24.4.4'
}

group = 'com.kuaprojects'
version = '0.0.1-SNAPSHOT'

ext {
	vaadinVersion = '24.4.4'
}

java {
	sourceCompatibility = '21'
}

vaadin {
	optimizeBundle = true
	productionMode = true
}

repositories {
	mavenCentral()
	maven {
		setUrl("https://maven.vaadin.com/vaadin-addons")
	}
	flatDir {
		dirs 'libs'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'com.vaadin:vaadin-spring-boot-starter'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.hibernate.orm:hibernate-jcache:6.4.4.Final'
	implementation 'org.ehcache:ehcache:3.9.6'
	implementation name: 'apexcharts-24.0.1'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
	testImplementation 'org.mockito:mockito-core:5.12.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
}
dependencyManagement {
	imports {
		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
	}
}
tasks.named('test') {
	useJUnitPlatform()
}

bootJar {
	archiveFileName = 'app.jar'
}